--- a/editorial-template.html
+++ b/editorial-template.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>EDITORIAL TEMPLATE</title>
@@ -22,7 +17,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="left-sidebar.html">Contact</a></li>
+								<li><a href="contact.html">Contact</a></li>
 								<li><a href="archive.html">Archive</a></li>
 							</ul>
 						</nav>
@@ -47,19 +42,19 @@
 								
 								<section>
 									<header>
-										<h3><a href="#">Sed lorem etiam consequat</a></h3>
+										<h3><a href="#">Editorial Template</a></h3>
 									</header>
 									<p>
-										Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+										Editorial's description goes here.
 									</p>
 									<div class="row 50%">
 										<div class="4u">
 											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Nibh sed cubilia</h4>
+											<h4>Make Up Artist</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												(Name)
 											</p>
 										</div>
 									</div>
@@ -68,9 +63,9 @@
 											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Proin sed adipiscing</h4>
+											<h4>Styling</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												(Name)
 											</p>
 										</div>
 									</div>
@@ -79,9 +74,9 @@
 											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Lorem feugiat magna</h4>
+											<h4>Etc</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												(Name)
 											</p>
 										</div>
 									</div>
@@ -90,9 +85,9 @@
 											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Sed tempus fringilla</h4>
+											<h4>Etc</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												(Name)
 											</p>
 										</div>
 									</div>
@@ -101,9 +96,9 @@
 											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Malesuada fermentum</h4>
+											<h4>Etc</h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												(Name)
 											</p>
 										</div>
 									</div>
