--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>FELIPE LONGONI</title>
@@ -24,7 +19,7 @@
 							</header>
 							<footer>
 								<a href="index.html">Home 	&nbsp;</a>
-								<a href="left-sidebar.html">Contact 	&nbsp;</a>
+								<a href="contact.html">Contact 	&nbsp;</a>
 								<a href="archive.html">Archive 	&nbsp;</a>		
 								<!--a href="archive.html" class="button circled scrolly">See Work</a>-->
 							</footer>
