--- a/archive.html
+++ b/archive.html
@@ -34,7 +34,7 @@
 							<article class="4u 12u(mobile) special">
 								<a href="editorial-template.html" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Editorial</a></h3>
+									<h3><a href="editorial-template.html">Editorial</a></h3>
 								</header>
 							</article>
 							<article class="4u 12u(mobile) special">
