--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
 			<!-- Header -->
 				<div id="header">
 					<!-- Nav -->
-						<nav2 id="nav">
+						<nav id="nav">
 							<h1><a href="index.html">FELIPE LONGONI</a></h1>
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="archive.html">Archive</a></li>
 							</ul>
-						</nav2>
+						</nav>
 
 				</div>
 
